# advent-of-code-2020

./: README.md
day1/: day1.cabal
day1/app/: Main.hs
day1/src/: MyLib.hs
day1/test/: MyLibTest.hs
day10/: CHANGELOG.md  README.md  day10.cabal
day10/src/: Day10.hs
day10/test/: Spec.hs
day11/: CHANGELOG.md  README.md  day11.cabal
day11/src/: Day11.hs
day11/test/: Spec.hs
day12/: CHANGELOG.md  README.md  day12.cabal
day12/src/: Day12.hs
day12/test/: Spec.hs
day13/src/: Aoc.hs
day13/test/: Spec.hs
day14/: aoc.cabal
day14/src/: Aoc.hs
day14/test/: Spec.hs
day15/: LICENSE  aoc.cabal
day15/src/: Aoc.hs
day15/test/: Spec.hs
day16/: aoc.cabal
day16/src/: Aoc.hs
day16/test/: Spec.hs  example.txt
day17/src/: Aoc.hs
day17/test/: Spec.hs
day18/: aoc.cabal
day18/src/: Aoc.hs
day18/test/: Spec.hs
day19/src/: Aoc.hs
day19/test/: Spec.hs  parser_example.txt
day2/: day2.cabal
day2/app/: Main.hs
day2/src/: MyLib.hs
day2/test/: MyLibTest.hs
day20/src/: Aoc.hs
day20/test/: Spec.hs
day21/: README.md
day21/src/: Aoc.hs
day21/test/: Spec.hs
day22/src/: Aoc.hs
day22/test/: Spec.hs
day24/src/: Aoc.hs
day24/test/: Spec.hs
day3/: CHANGELOG.md  README.md  day3.cabal
day3/src/: Day3.hs
day3/test/: Spec.hs
day4/: CHANGELOG.md  README.md  day4.cabal
day4/app/: Main.hs
day4/src/: Day4.hs
day4/test/: Spec.hs
day5/: CHANGELOG.md  README.md  day5.cabal
day5/app/: Main.hs
day5/src/: Day5.hs
day5/test/: Spec.hs
day6/: CHANGELOG.md  README.md  day6.cabal
day6/app/: Main.hs
day6/src/: Day6.hs
day7/: CHANGELOG.md  README.md  day7.cabal
day7/src/: Day7.hs
day7/test/: Spec.hs
day8/: CHANGELOG.md  README.md  day8.cabal
day8/src/: Day8.hs
day8/test/: Spec.hs
day9/: CHANGELOG.md  README.md  day9.cabal
day9/src/: Day9.hs
day9/test/: Spec.hs
template/: CHANGELOG.md
template/src/: Aoc.hs
template/test/: Spec.hs
