cabal-version:      2.4
name:               day1
version:            0.1.0.0
author:             Jean-Baptiste Potonnier
extra-source-files: CHANGELOG.md

library
    ghc-options:      -Wall
    exposed-modules:  MyLib
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

executable day1
    main-is:          Main.hs
    ghc-options:      -Wall
    build-depends:    base
                    , hspec
                    , day1

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite day1-test
    ghc-options:      -Wall
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
                    , src
    main-is:          MyLibTest.hs
    build-depends:    base
                    , day1
                    , hspec
