cabal-version:      2.4
name:               day2
version:            0.1.0.0
author:             Jean-Baptiste Potonnier
extra-source-files: CHANGELOG.md

library
    ghc-options: -Wall
    exposed-modules:  MyLib
    build-depends:
        base
      , split
      , safe
    hs-source-dirs:   src
    default-language: Haskell2010

executable day2
    main-is:          Main.hs
    ghc-options: -Wall
    build-depends:
        base
      , day2

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite day2-test
    ghc-options: -Wall
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base
      , day2
      , hspec
