cabal-version:       2.4
name:                day5
version:             0.0.0.0
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

common common-options
  build-depends:       base
                     , relude
                     , containers
                     , attoparsec

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude, Relude.Extra)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Day5

executable main
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       day5
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       day5, hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
