cabal-version:       2.4
name:                day7
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Jean-Baptiste Potonnier
maintainer:          Jean-Baptiste Potonnier <>
copyright:           2020 Jean-Baptiste Potonnier
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

common common-options
  build-depends:       base
                     , relude
                     , text
                     , containers
                     , attoparsec
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude, Relude.Extra)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Day7

test-suite test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       day7, hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N